fix admin layout drawer and hide navbar

--- a/src/app/components/pages/admin/admin-layout/admin-layout.component.html
+++ b/src/app/components/pages/admin/admin-layout/admin-layout.component.html
@@ -17,8 +17,10 @@
         <ul class="client-links">
         </ul>
       </nav>
-  </aside>
-  <main class="content">
-    <router-outlet></router-outlet>
-  </main>
+    </aside>
+    <div class="overlay" [class.show]="menuAbierto" (click)="toggleMenu(false)"></div>
+    <main class="content">
+      <router-outlet></router-outlet>
+    </main>
+  </div>
 </div>
