--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,19 @@ body {
   box-sizing: border-box;
 }
 
+*:focus {
+  outline: 2px solid #38290F;
+}
+
+.visually-hidden {
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
+  white-space: nowrap;
+}
+
 .login-modal .mat-dialog-container {
   z-index: 1002;
 }
