Add user registration page and link

--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -10,6 +10,10 @@
 
       <button type="submit" class="btn-primary">Iniciar sesión</button>
     </form>
+    <p class="register-link">
+      ¿No tienes cuenta?
+      <a routerLink="/register">Regístrate aquí</a>
+    </p>
   </div>
 
   <div class="ilustracion">
