--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -17,6 +17,6 @@
   </div>
 
   <div class="ilustracion">
-    <img src="/assets/libros_killa.png" alt="Ilustración lectura" />
+    <img appLazyLoad="/assets/libros_killa.png" alt="Ilustración lectura" />
   </div>
 </div>
