--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,4 +1,8 @@
 <app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
+<main [class.blur]="drawer.isOpen$ | async">
+  <router-outlet></router-outlet>
+</main>
+
+<app-drawer-menu></app-drawer-menu>
 
