--- a/src/app/components/hero-banner/hero-banner.component.html
+++ b/src/app/components/hero-banner/hero-banner.component.html
@@ -2,6 +2,6 @@
   <div class="hero-content">
     <h1 id="hero-title">Descubre un mundo mágico de cuentos</h1>
     <p class="subtitle">{{ subtitle }}</p>
-    <a routerLink="/cuentos" class="btn">Ver Cuentos</a>
+    <a routerLink="/cuentos" class="btn hover-scale">Ver Cuentos</a>
   </div>
 </header>
