--- a/src/app/components/hero-banner/hero-banner.component.scss
+++ b/src/app/components/hero-banner/hero-banner.component.scss
@@ -34,6 +34,7 @@
     border: none;
     border-radius: 5px;
     text-decoration: none;
+    transition: transform 0.15s ease;
   }
 
   .hero-content {
