fix build warnings

--- a/src/app/components/pages/admin/admin-pedidos/admin-pedidos.component.html
+++ b/src/app/components/pages/admin/admin-pedidos/admin-pedidos.component.html
@@ -42,7 +42,7 @@
     </tbody>
   </table>
 </div>
-<app-modal *ngIf="selectedPedido" [title]="'Voucher Pedido #' + (selectedPedido?.Id || selectedPedido?.id)" (close)="cerrarModal()">
+<app-modal *ngIf="selectedPedido" [title]="'Voucher Pedido #' + (selectedPedido!.Id || selectedPedido!.id)" (close)="cerrarModal()">
   <img *ngIf="voucherImg" [src]="voucherImg" alt="Voucher" />
   <div modal-footer>
     <button class="btn btn-success" (click)="validarPago()" [disabled]="processing">Validar Pago</button>
