--- a/src/app/components/detalle-cuento/detalle-cuento.component.scss
+++ b/src/app/components/detalle-cuento/detalle-cuento.component.scss
@@ -543,7 +543,7 @@
   .breadcrumb {
     padding: 0 15px;
     font-size: 0.75rem;
-
+  }
   .cantidad-input {
     margin-left: 0;
     margin-top: 0.5rem;
