--- a/src/app/components/admin-drawer/admin-drawer.component.scss
+++ b/src/app/components/admin-drawer/admin-drawer.component.scss
@@ -27,6 +27,11 @@ $drawer-width: 260px;
         width: 20px;
         height: 20px;
         flex-shrink: 0;
+        img {
+          width: 100%;
+          height: 100%;
+          display: block;
+        }
       }
       &:hover {
         background: rgba($text-dark, .05);
