--- a/src/app/components/pages/register/register.component.html
+++ b/src/app/components/pages/register/register.component.html
@@ -4,23 +4,29 @@
     <form [formGroup]="registerForm" (ngSubmit)="registrar()">
       <label for="nombre">Nombre</label>
       <input id="nombre" formControlName="nombre" type="text" required />
+      <app-form-error [control]="registerForm.get('nombre')" [isSubmitted]="isSubmitted"></app-form-error>
 
       <label for="apellido">Apellido</label>
       <input id="apellido" formControlName="apellido" type="text" required />
+      <app-form-error [control]="registerForm.get('apellido')" [isSubmitted]="isSubmitted"></app-form-error>
 
-      <label for="email">Correo electr\u00f3nico</label>
+      <label for="email">Correo electrónico</label>
       <input id="email" formControlName="email" type="email" required />
+      <app-form-error [control]="registerForm.get('email')" [isSubmitted]="isSubmitted"></app-form-error>
 
-      <label for="telefono">Tel\u00e9fono</label>
+      <label for="telefono">Teléfono</label>
       <input id="telefono" formControlName="telefono" type="text" required />
+      <app-form-error [control]="registerForm.get('telefono')" [isSubmitted]="isSubmitted"></app-form-error>
 
-      <label for="password">Contrase\u00f1a</label>
+      <label for="password">Contraseña</label>
       <input id="password" formControlName="password" type="password" required />
+      <app-form-error [control]="registerForm.get('password')" [isSubmitted]="isSubmitted"></app-form-error>
 
-      <label for="confirmarPassword">Confirmar contrase\u00f1a</label>
+      <label for="confirmarPassword">Confirmar contraseña</label>
       <input id="confirmarPassword" formControlName="confirmarPassword" type="password" required />
+      <app-form-error [control]="registerForm.get('confirmarPassword')" [isSubmitted]="isSubmitted"></app-form-error>
 
-      <div class="error" *ngIf="error">{{ error }}</div>
+      <div class="error" *ngIf="error" aria-live="polite">{{ error }}</div>
 
       <button type="submit" class="btn-primary">Registrarse</button>
     </form>
