--- a/src/app/components/detalle-cuento/detalle-cuento.component.html
+++ b/src/app/components/detalle-cuento/detalle-cuento.component.html
@@ -1,9 +1,5 @@
 <div class="detalle-pagina">
-  <nav class="breadcrumb">
-    <a routerLink="/home">Inicio</a> /
-    <a routerLink="/cuentos">Cuentos</a> /
-    <span>{{ cuento?.titulo }}</span>
-  </nav>
+  <app-breadcrumb [currentItemName]="cuento?.titulo"></app-breadcrumb>
   <div class="detalle-grid">
     <div class="hero">
       <figure class="galeria">
